Started creating static pages with link.

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -187,8 +187,8 @@
   </div>
   <div class="rightbar">
     <ul class="rightbar-top">
-      <li>help and faq</li>
-      <li>avoid scams & fraud</li>
+      <li><%= link_to 'help and faq', help_path%></li>
+      <li><%= link_to 'avoid scams & fraud', scams_path%></li>
       <li>personal safety tips</li>
       <li class="rightbar-top">terms of use</li>
       <li>privacy policy</li>
