--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag 'listings.js' %>
 <div class="topbar">
   <div class="container">
     <div class="vertical-center">
@@ -12,6 +13,14 @@
       <%= f.text_field :title %>
       <%= f.label :description %>
       <%= f.text_area :description %>
+      <p>
+      <%= f.label :category_id %>
+      <%= f.select :category_id, Category.all.map{|f|[f.name, f.id]} %>
+      </p>
+      <p>
+      <%= f.label :subcategory_id %>
+      <%= f.select :subcategory_id, options_for_select([]) %>
+      </p>
       <%= f.label :city %>
       <%= f.text_field :city %>
       <%= f.label :state %>
