Breadcrumbs fix and working

--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,9 +1,10 @@
 <div class="topbar">
   <div class="container">
-    rubyslist
+    <div class="vertical-center">
+      <%= link_to 'rubyslist', root_path %> > help
   </div>
 </div>
-<div class="container">
+<div class="container"><br />
     <p>iLorem ipsum dolor sit amet, consectetur adipiscing elit.
     Vestibulum varius mi vel ipsum ultrices, non volutpat nisl viverra.
     Sed rhoncus elementum tortor, vitae condimentum dolor. Vestibulum
