--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -1,8 +1,7 @@
 <div class="topbar">
   <div class="container">
     <div class="vertical-center">
-      rubyslist > jobs > accounting
-    </div>
+      <%= link_to 'rubyslist', root_path %> > <%= link_to @category.name, @category %> > <%=@subcategory.name %>
   </div>
 </div>
 <div class="container">
