--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,8 +1,7 @@
 <div class="topbar">
   <div class="container">
     <div class="vertical-center">
-      <%= link_to 'rubyslist', root_path %> > jobs > accounting
-    </div>
+       <%= link_to 'rubyslist', root_path %> > <%= link_to @listing.category.name, category_path(@listing.category) %> > <%= @listing.subcategory.name %>
   </div>
 </div>
 <div class="container">
