added style to stylesheet

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="leftbar">
-    <a href="#"><h1>rubyslist</h1></a>
+    <a href="#"><h1>Craigslist Clone</h1></a>
     <ul>
       <li><%= link_to 'post to classifieds', new_listing_path %></li>
       <% if user_signed_in? %>
